# thigass

./: Cargo.toml
parser/: Cargo.toml
parser/src/: lib.rs  main.rs  reader.rs
playground/: Cargo.toml
playground/src/: compute.wgsl  main.rs
src/: main.rs
tester/: Cargo.toml
tester/src/: main.rs
