[package]
name = "thigass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.8.0"
fxhash = "0.2.1"
winit = "0.26.1"
wgpu = "0.12.0"
env_logger = "0.9.0"
pollster = "0.2.5"
bytemuck = "1.7.3"