[workspace]
resolver = "2"
members = ["parser", "playground", "tester"]

[workspace.lints]
clippy.unnecessary_lazy_evaluations = "allow"
clippy.len_zero = "allow"
clippy.struct_excessive_bools = "allow"
clippy.trivially_copy_pass_by_ref = "allow"
clippy.redundant_closure_for_method_calls = "allow"
clippy.missing_errors_doc = "allow"
clippy.too_many_lines = "allow"

[profile.release]
debug = true
lto = "thin"